import { describe, beforeAll, afterAll, it, expect, vi } from 'vitest';

import fs from 'node:fs/promises';
import os from 'node:os';
import path from 'node:path';
import { execFile } from 'node:child_process';
import { promisify } from 'node:util';

import {
  configure,
  hasExpectedExitCode,
  scopeToFixture as scopeToSkuFixture,
  waitForExitCode,
} from '@sku-private/testing-library';
import { scopeToFixture } from '@sku-private/testing-library/create';
import { normalizePackageManagerVersion } from '@sku-private/test-utils';

const execFileAsync = promisify(execFile);

const { create, fixturePath } = scopeToFixture('sku-create');

const timeout = 100_000;

configure({
  asyncUtilTimeout: timeout,
});

vi.setConfig({
  hookTimeout: timeout + 1000,
  testTimeout: timeout + 1000,
});

const projectName = 'new-project';
const projectDirectory = fixturePath(projectName);

let pack: Awaited<ReturnType<typeof packSku>>;
let createEnv: NodeJS.ProcessEnv;

/**
 * Packs the local `packages/sku` workspace into a temporary `.tgz` so create
 * tests can install sku via `SKU_CREATE_SKU_SPECIFIER` (`sku@file:…`) instead
 * of the published registry package.
 */
const packSku = async () => {
  const packDestination = await fs.mkdtemp(
    path.join(os.tmpdir(), 'sku-create-pack-'),
  );
  const skuPackageDir = path.resolve(__dirname, '../../packages/sku');

  await execFileAsync('pnpm', ['pack', '--pack-destination', packDestination], {
    cwd: skuPackageDir,
  });

  const packedFiles = await fs.readdir(packDestination);
  const tarball = packedFiles.find((file) => file.endsWith('.tgz'));

  if (!tarball) {
    throw new Error('Expected sku pack to produce a .tgz file');
  }

  return {
    tarballPath: path.join(packDestination, tarball),
    remove: () => fs.rm(packDestination, { recursive: true, force: true }),
  };
};

beforeAll(async () => {
  pack = await packSku();

  createEnv = {
    SKU_CREATE_SKU_SPECIFIER: `sku@file:${pack.tarballPath}`,
  };
});

afterAll(async () => {
  await pack.remove();
});

describe('template flag', () => {
  it('should create a webpack project', async () => {
    const result = await create(projectName, ['--template', 'webpack'], {
      spawnOpts: { env: createEnv },
    });
    expect(
      await result.findByText(
        `Creating new sku project: ${projectName} with webpack template`,
      ),
    ).toBeInTheConsole();
  });

  it('should create a vite project', async () => {
    const result = await create(projectName, ['--template', 'vite'], {
      spawnOpts: { env: createEnv },
    });
    expect(
      await result.findByText(
        `Creating new sku project: ${projectName} with vite template`,
      ),
    ).toBeInTheConsole();
  });

  it('should create a vite-ssr project', async () => {
    const result = await create(projectName, ['--template', 'vite-ssr'], {
      spawnOpts: { env: createEnv },
    });
    expect(
      await result.findByText(
        `Creating new sku project: ${projectName} with vite-ssr template`,
      ),
    ).toBeInTheConsole();
  });
});

describe.each(['webpack', 'vite', 'vite-ssr'])('sku-create %s', (template) => {
  beforeAll(async () => {
    await fs.rm(projectDirectory, { recursive: true, force: true });
  });

  afterAll(async () => {
    await fs.rm(projectDirectory, { recursive: true, force: true });
  });

  // Tests are run sequentially so this can be run first in its own test
  it.runIf(template === 'webpack')(
    'should create a webpack project',
    async () => {
      const result = await create(projectName, [], {
        spawnOpts: { env: createEnv },
      });
      expect(
        await result.findByText(
          'Which template would you like to use?',
          {},
          { timeout },
        ),
      ).toBeInTheConsole();

      // Vite → Vite SSR → Webpack
      await result.userEvent.keyboard('[ArrowDown]');
      await result.userEvent.keyboard('[ArrowDown]');
      expect(await result.findByText('❯ Webpack')).toBeInTheConsole();

      await result.userEvent.keyboard('[Enter]');
      expect(
        await result.findByText(
          `Creating new sku project: ${projectName} with webpack template`,
        ),
      ).toBeInTheConsole();

      expect(
        await result.findByText(`${projectName} created`),
      ).toBeInTheConsole();
    },
  );

  it.runIf(template === 'vite')('should create a vite project', async () => {
    const result = await create(projectName, [], {
      spawnOpts: { env: createEnv },
    });
    expect(
      await result.findByText(
        'Which template would you like to use?',
        {},
        { timeout },
      ),
    ).toBeInTheConsole();

    expect(await result.findByText('❯ Vite')).toBeInTheConsole();

    await result.userEvent.keyboard('[Enter]');

    expect(
      await result.findByText(
        `Creating new sku project: ${projectName} with vite template`,
      ),
    ).toBeInTheConsole();

    expect(
      await result.findByText(`${projectName} created`),
    ).toBeInTheConsole();
  });

  it.runIf(template === 'vite-ssr')(
    'should create a vite-ssr project',
    async () => {
      const result = await create(projectName, [], {
        spawnOpts: { env: createEnv },
      });
      expect(
        await result.findByText(
          'Which template would you like to use?',
          {},
          { timeout },
        ),
      ).toBeInTheConsole();

      await result.userEvent.keyboard('[ArrowDown]');
      expect(await result.findByText('❯ Vite SSR')).toBeInTheConsole();

      await result.userEvent.keyboard('[Enter]');

      expect(
        await result.findByText(
          `Creating new sku project: ${projectName} with vite-ssr template`,
        ),
      ).toBeInTheConsole();

      expect(
        await result.findByText(`${projectName} created`),
      ).toBeInTheConsole();
    },
  );

  it('should create package.json', async () => {
    const contents = await fs.readFile(
      fixturePath(projectName, 'package.json'),
      'utf-8',
    );
    const packageJson = JSON.parse(contents);

    expect(replaceDependencyVersions(packageJson)).toMatchSnapshot();
  });

  it.for([
    'sku.config.ts',
    '.gitignore',
    'eslint.config.mjs',
    'README.md',
    '.prettierignore',
    'src/App/NextSteps.tsx',
    'pnpm-workspace.yaml',
  ])('should create %s', async (file) => {
    const contents = await fs.readFile(fixturePath(projectName, file), 'utf-8');

    expect(stripYamlVersions(contents)).toMatchSnapshot();
  });

  it.runIf(template === 'vite-ssr')(
    'should create Vite SSR entry files with named exports',
    async () => {
      const routes = await fs.readFile(
        fixturePath(projectName, 'src/routes.tsx'),
        'utf-8',
      );
      const server = await fs.readFile(
        fixturePath(projectName, 'src/server.tsx'),
        'utf-8',
      );
      const client = await fs.readFile(
        fixturePath(projectName, 'src/client.tsx'),
        'utf-8',
      );
      const skuConfig = await fs.readFile(
        fixturePath(projectName, 'sku.config.ts'),
        'utf-8',
      );

      expect(skuConfig).toContain("buildType: 'ssr'");
      expect(skuConfig).toContain("sites: ['default']");
      expect(routes).toContain('export const routes');
      expect(routes).not.toContain('export const site');
      expect(routes).toContain('Component: RootLayout');
      expect(routes).not.toContain("path: '/'");
      expect(server).not.toContain('export const onRequest');
      expect(server).not.toMatch(/export (const|function) getSite/);
      expect(server).toContain('defineServerEntry');
      expect(server).toContain('middleware');
      expect(server).toContain('/api/health');
      expect(server).not.toContain('Providers');
      expect(client).toContain('defineClientEntry');
      expect(client).toContain('typeof server');
      expect(client).toContain("import type server from './server'");
      expect(client).toContain('onHydrate');
      expect(client).not.toContain('Providers');
      await expect(
        fs.access(fixturePath(projectName, 'src/App/ssrContext.ts')),
      ).resolves.toBeUndefined();
      await expect(
        fs.access(fixturePath(projectName, 'src/App/Providers.tsx')),
      ).rejects.toThrow();
      await expect(
        fs.access(fixturePath(projectName, 'src/render.tsx')),
      ).rejects.toThrow();
    },
  );

  it.runIf(template === 'vite')('should not set buildType ssr', async () => {
    const skuConfig = await fs.readFile(
      fixturePath(projectName, 'sku.config.ts'),
      'utf-8',
    );
    expect(skuConfig).not.toContain("buildType: 'ssr'");
  });

  it('should pass lint', async () => {
    const { sku } = scopeToSkuFixture('sku-create/new-project');
    const result = await sku('lint');
    await waitForExitCode(result, 0);
    expect(hasExpectedExitCode(result, 0)).toBe(true);
  });
});

/**
 * When snapshot testing the package.json, we don't care about the specific versions of the dependencies.
 */
function replaceDependencyVersions(packageJson: Record<string, any>) {
  const newPackageJson = structuredClone(packageJson);

  // eslint-disable-next-line guard-for-in
  for (const dep in newPackageJson.dependencies) {
    newPackageJson.dependencies[dep] = 'VERSION_IGNORED';
  }

  // eslint-disable-next-line guard-for-in
  for (const dep in newPackageJson.devDependencies) {
    newPackageJson.devDependencies[dep] = 'VERSION_IGNORED';
  }

  if ('packageManager' in newPackageJson) {
    newPackageJson.packageManager = normalizePackageManagerVersion(
      newPackageJson.packageManager,
    );
  }

  return newPackageJson;
}

/**
 * When snapshot testing YAML files, we don't care about the specific versions.
 * This function strips version numbers from YAML content.
 */
function stripYamlVersions(yamlContent: string): string {
  return yamlContent
    .replace(
      /(?<!minimumReleaseAge):\s*[\d.]+(?:\+sha\d+-[a-f0-9]+)?.*/g,
      ': VERSION_IGNORED',
    )
    .replace(/sku@file:\s*.+/g, 'sku@file: VERSION_IGNORED');
}
