// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`sku-create > ssr > should create .gitignore 1`] = `
"node_modules
npm-debug.log

# managed by sku
.eslintcache
.prettierrc
.ssl
coverage/
dist/
eslint.config.mjs
report/
tsconfig.json
# end managed by sku
"
`;

exports[`sku-create > ssr > should create .prettierignore 1`] = `
"# managed by sku
.eslintcache
.prettierrc
coverage/
dist/
eslint.config.mjs
pnpm-lock.yaml
report/
tsconfig.json
# end managed by sku
"
`;

exports[`sku-create > ssr > should create README.md 1`] = `
"# new-project-ssr

This project is powered by [sku](https://github.com/seek-oss/sku), [braid](https://github.com/seek-oss/braid-design-system) and built with [React](https://facebook.github.io/react).

## Getting Started

First of all, make sure you&#39;ve installed [pnpm](https://pnpm.io/installation).

Then, install dependencies:

\`\`\`sh
$ pnpm i
\`\`\`

## Workflow

Start a local development server:

\`\`\`sh
$ pnpm run start
\`\`\`

Run unit tests:

\`\`\`sh
$ pnpm run test
\`\`\`

Lint and format code:

\`\`\`sh
$ pnpm run lint
$ pnpm run format
\`\`\`

Build assets for production:

\`\`\`sh
$ pnpm run build
\`\`\`
"
`;

exports[`sku-create > ssr > should create eslint.config.mjs 1`] = `
"/** THIS FILE IS GENERATED BY SKU, MANUAL CHANGES WILL BE DISCARDED **/
import { createEslintConfig } from 'sku/config/eslint';

export default await createEslintConfig('{cwd}/fixtures/sku-create/new-project-ssr/sku.config.ts');"
`;

exports[`sku-create > ssr > should create package.json 1`] = `
{
  "dependencies": {
    "braid-design-system": "VERSION_IGNORED",
    "react": "VERSION_IGNORED",
    "react-dom": "VERSION_IGNORED",
    "react-router": "VERSION_IGNORED",
  },
  "devDependencies": {
    "@types/react": "VERSION_IGNORED",
    "@types/react-dom": "VERSION_IGNORED",
    "@vanilla-extract/css": "VERSION_IGNORED",
    "sku": "VERSION_IGNORED",
    "vitest": "VERSION_IGNORED",
  },
  "imports": {
    "#src/*": "./src/*",
  },
  "name": "new-project-ssr",
  "packageManager": "pnpm@11.VERSION_IGNORED",
  "private": true,
  "scripts": {
    "build": "sku build",
    "format": "sku format",
    "lint": "sku lint",
    "start": "sku start",
    "test": "sku test --run",
  },
  "type": "module",
  "version": "1.0.0",
}
`;

exports[`sku-create > ssr > should create pnpm-workspace.yaml 1`] = `
"allowBuilds:
  '@parcel/watcher': true
  '@swc/core': true
  core-js-pure: false
  esbuild: true
  sku: true
  unrs-resolver: true
blockExoticSubdeps: true
configDependencies:
  pnpm-plugin-sku: VERSION_IGNORED
minimumReleaseAge: 4320 # 3 days
minimumReleaseAgeExclude:
  - '@braid-design-system/*'
  - '@capsizecss/*'
  - '@seek/*'
  - '@sku-lib/*'
  - '@vanilla-extract/*'
  - '@vocab/*'
  - braid-design-system
  - browserslist-config-seek
  - eslint-config-seek
  - sku
publicHoistPattern:
  - eslint
  - prettier
strictDepBuilds: false
trustPolicy: off
trustPolicyExclude:
  - semver@6.3.1 # dependency of eslint-plugin-react
"
`;

exports[`sku-create > ssr > should create sku.config.ts 1`] = `
"import type { SkuConfig } from 'sku';

const skuConfig = {
  bundler: 'vite',
  buildType: 'ssr',
  publicPath: '/',
  expressTrustProxy: true,
  testRunner: 'vitest',
  entrySideEffects: ['braid-design-system/reset'],
  pathAliases: {
    '#src/*': './src/*',
  },
} satisfies SkuConfig;

export default skuConfig;
"
`;

exports[`sku-create > ssr > should create src/ErrorBoundary.tsx 1`] = `
"import { isRouteErrorResponse, useRouteError } from 'react-router';

export function ErrorBoundary() {
  const error = useRouteError();

  if (isRouteErrorResponse(error)) {
    return (
      <main>
        <h1>
          {error.status} {error.statusText}
        </h1>
        <p>{typeof error.data === 'string' ? error.data : null}</p>
      </main>
    );
  }

  return (
    <main>
      <h1>Something went wrong</h1>
    </main>
  );
}
"
`;

exports[`sku-create > ssr > should create src/RootLayout.tsx 1`] = `
"import 'braid-design-system/reset';

import { BraidProvider } from 'braid-design-system';
import seekJobs from 'braid-design-system/themes/seekJobs';
import { StrictMode } from 'react';
import { Outlet } from 'react-router';

/**
 * Your app's root layout route. Mount isomorphic providers here (Braid, Vocab,
 * Apollo via \`useReactContext()\`, …). Env-differing *values* come from dual-entry
 * \`getReactContext\`; serialisable content from \`getClientContext\` / \`useClientContext\`.
 */
export const RootLayout = () => (
  <StrictMode>
    <BraidProvider theme={seekJobs}>
      <Outlet />
    </BraidProvider>
  </StrictMode>
);
"
`;

exports[`sku-create > ssr > should create src/client.tsx 1`] = `
"import { defineClientEntry } from 'sku/runtime';

import type server from './server';

/** Optional hydrate-time side effects (e.g. analytics). Receives \`{ clientContext }\`. */
const client = defineClientEntry<typeof server>()({
  onHydrate() {},
});

export default client;
"
`;

exports[`sku-create > ssr > should create src/pages/about/about.tsx 1`] = `
"import { Box, Heading, Text, Strong, Stack } from 'braid-design-system';
import { Link } from 'react-router';

export function Component() {
  return (
    <Box padding="xlarge">
      <Stack space="large">
        <Heading level="2">About</Heading>
        <Text>
          This is a lazy-loaded route in your SSR starter. Compose{' '}
          <Strong>
            lazy: () =&gt; import(&apos;./pages/about/about&apos;)
          </Strong>{' '}
          in <Strong>routes.tsx</Strong> so sku can auto-derive modulepreloads
          in production. Export a named <Strong>Component</Strong> (not{' '}
          <Strong>default</Strong>) from the page module.
        </Text>
        <Text>
          <Link to="/">Back home</Link>
        </Text>
      </Stack>
    </Box>
  );
}
"
`;

exports[`sku-create > ssr > should create src/pages/home/home.tsx 1`] = `
"import {
  Box,
  Heading,
  Text,
  Strong,
  ContentBlock,
  TextLink,
  Stack,
  List,
  Divider,
} from 'braid-design-system';
import { Link } from 'react-router';

import { useSite } from '../../skuContext';

import * as styles from './home.css';

export function Component() {
  const site = useSite();

  return (
    <Box
      paddingY="xxlarge"
      paddingX={{ mobile: 'small', tablet: 'gutter' }}
      background="customDark"
      className={styles.background}
    >
      <ContentBlock width="large">
        <Stack space="xxlarge">
          <Stack space="xlarge">
            <Stack space="medium" align="center">
              <Heading level="1" component="span">
                🎉
              </Heading>
              <Heading level="1" weight="weak">
                Congratulations!
              </Heading>
            </Stack>
            <Stack space="medium" align="center">
              <Text size="large">
                <Strong>{'new-project-ssr'}</Strong> has been successfully
                initialised.
              </Text>
              <Text>Current site: {site}</Text>
              <Text>
                <Link to="/about">About this starter</Link>
              </Text>
            </Stack>
          </Stack>

          <Box
            background="surface"
            borderRadius="xlarge"
            boxShadow="large"
            padding={{ mobile: 'large', tablet: 'xlarge', desktop: 'xxlarge' }}
          >
            <Stack space={{ mobile: 'xlarge', desktop: 'xxlarge' }}>
              <Stack space="large">
                <Heading level="2">🧰 Features and Tooling</Heading>
                <Text>
                  The project comes pre-configured with a lot of standardised
                  tooling to make authoring web applications easier.
                </Text>

                <Stack space="gutter">
                  <Heading level="3">Platform</Heading>

                  <Text>
                    The{' '}
                    <TextLink href="https://seek-oss.github.io/sku/">
                      sku platform
                    </TextLink>{' '}
                    provides a number of tools to make development more
                    efficient, for example,{' '}
                    <TextLink href="https://www.typescriptlang.org/">
                      TypeScript
                    </TextLink>
                    , <TextLink href="https://vitest.dev/">Vitest</TextLink>,{' '}
                    <TextLink href="https://eslint.org/">ESLint</TextLink>, and
                    more.
                  </Text>
                </Stack>

                <Stack space="gutter">
                  <Heading level="3">Components</Heading>

                  <Text>
                    The project comes with{' '}
                    <TextLink href="https://seek-oss.github.io/braid-design-system/">
                      Braid Design System
                    </TextLink>{' '}
                    — SEEK&rsquo;s themeable component library.
                  </Text>
                </Stack>

                <Stack space="gutter">
                  <Heading level="3">Translations</Heading>

                  <Text>
                    The project comes with{' '}
                    <TextLink href="https://github.com/seek-oss/vocab/">
                      Vocab
                    </TextLink>{' '}
                    — SEEK&rsquo;s strongly-typed internationalization framework
                    for React.
                  </Text>
                </Stack>
              </Stack>

              <Divider weight="strong" />

              <Stack space="large">
                <Heading level="2">🏃‍♀️ Next steps</Heading>
                <Text>
                  Ensure you’re fully set up with these additional
                  recommendations.
                </Text>
                <Stack space="gutter">
                  <Heading level="3">Brand resources</Heading>
                  <Text>
                    To align your project to SEEK&rsquo;s brand standards it is
                    recommended to install{' '}
                    <TextLink href="https://github.com/SEEK-Jobs/shared-web-assets">
                      Shared web assets
                    </TextLink>
                    .
                  </Text>
                </Stack>

                <Stack space="gutter">
                  <Heading level="3">Telemetry</Heading>
                  <Text>
                    To help us improve sku, please install our private{' '}
                    <TextLink href="https://github.com/SEEK-Jobs/sku-telemetry">
                      sku telemetry
                    </TextLink>{' '}
                    package that gives us insights on usage, errors and
                    performance.
                  </Text>
                </Stack>
              </Stack>

              <Divider weight="strong" />

              <Stack space="large">
                <Heading level="2">🙋‍♂️ Support</Heading>

                <Text>
                  Whether it&rsquo;s a problem or a feature request, please
                  don&rsquo;t hesitate to contact us via slack.
                </Text>

                <Stack space="gutter">
                  <Heading level="3">Technical support</Heading>

                  <Text>
                    For technical queries about the platform or the design
                    system:
                  </Text>

                  <List>
                    <Text>
                      <TextLink href="https://seekchat.slack.com/channels/sku-support">
                        #sku-support
                      </TextLink>
                    </Text>
                    <Text>
                      <TextLink href="https://seekchat.slack.com/channels/braid-support">
                        #braid-support
                      </TextLink>
                    </Text>
                  </List>
                </Stack>

                <Stack space="gutter">
                  <Heading level="3">Design support</Heading>

                  <Text>
                    To discuss new or existing design patterns, visit{' '}
                    <TextLink href="https://seekchat.slack.com/channels/braid-design-support">
                      #braid-design-support
                    </TextLink>
                    .
                  </Text>
                </Stack>
              </Stack>

              <Divider weight="strong" />

              <Stack space="large">
                <Heading level="2">📣 Announcements</Heading>

                <Text>
                  For keeping up to date with new features and bug fixes as they
                  are released, it&rsquo;s recommended to join and turn on
                  notifications for the following channels:
                </Text>

                <List>
                  <Text>
                    <TextLink href="https://seekchat.slack.com/channels/front-end-tooling-announcements">
                      #front-end-tooling-announcements
                    </TextLink>
                  </Text>
                  <Text>
                    <TextLink href="https://seekchat.slack.com/channels/braid-announcements">
                      #braid-announcements
                    </TextLink>
                  </Text>
                </List>
              </Stack>
            </Stack>
          </Box>
        </Stack>
      </ContentBlock>
    </Box>
  );
}
"
`;

exports[`sku-create > ssr > should create src/routes.tsx 1`] = `
"import type { SkuRouteObject } from 'sku/runtime';

import { ErrorBoundary } from './ErrorBoundary';
import { RootLayout } from './RootLayout';

export const routes: SkuRouteObject[] = [
  {
    Component: RootLayout,
    ErrorBoundary,
    children: [
      { index: true, lazy: () => import('./pages/home/home') },
      { path: 'about', lazy: () => import('./pages/about/about') },
    ],
  },
];
"
`;

exports[`sku-create > ssr > should create src/server.tsx 1`] = `
"import { defineServerEntry } from 'sku/runtime';

/** Realistic production middleware — health check before HTML render. */
const server = defineServerEntry({
  middleware: [
    (req, res, next) => {
      if (req.path === '/api/health') {
        res.status(200).type('text/plain').send('ok');
        return;
      }
      next();
    },
  ],
});

export default server;
"
`;

exports[`sku-create > ssr > should create src/skuContext.ts 1`] = `
"import { createSkuContexts } from 'sku/runtime';

import type client from './client';
import type server from './server';

/**
 * Typed hooks bound to this app's entry objects. Request seeds
 * (\`site\` / \`clientContext\` / \`reactContext\`) come from SkuProvider.
 */
export const { useSite, useClientContext, useReactContext } = createSkuContexts<
  typeof server,
  typeof client
>();
"
`;

exports[`sku-create > vite > should create .gitignore 1`] = `
"node_modules
npm-debug.log

# managed by sku
.eslintcache
.prettierrc
.ssl
coverage/
dist/
eslint.config.mjs
report/
tsconfig.json
# end managed by sku
"
`;

exports[`sku-create > vite > should create .prettierignore 1`] = `
"# managed by sku
.eslintcache
.prettierrc
coverage/
dist/
eslint.config.mjs
pnpm-lock.yaml
report/
tsconfig.json
# end managed by sku
"
`;

exports[`sku-create > vite > should create README.md 1`] = `
"# new-project-vite

This project is powered by [sku](https://github.com/seek-oss/sku), [braid](https://github.com/seek-oss/braid-design-system) and built with [React](https://facebook.github.io/react).

## Getting Started

First of all, make sure you&#39;ve installed [pnpm](https://pnpm.io/installation).

Then, install dependencies:

\`\`\`sh
$ pnpm i
\`\`\`

## Workflow

Start a local development server:

\`\`\`sh
$ pnpm run start
\`\`\`

Run unit tests:

\`\`\`sh
$ pnpm run test
\`\`\`

Lint and format code:

\`\`\`sh
$ pnpm run lint
$ pnpm run format
\`\`\`

Build assets for production:

\`\`\`sh
$ pnpm run build
\`\`\`
"
`;

exports[`sku-create > vite > should create eslint.config.mjs 1`] = `
"/** THIS FILE IS GENERATED BY SKU, MANUAL CHANGES WILL BE DISCARDED **/
import { createEslintConfig } from 'sku/config/eslint';

export default await createEslintConfig('{cwd}/fixtures/sku-create/new-project-vite/sku.config.ts');"
`;

exports[`sku-create > vite > should create package.json 1`] = `
{
  "dependencies": {
    "braid-design-system": "VERSION_IGNORED",
    "react": "VERSION_IGNORED",
    "react-dom": "VERSION_IGNORED",
  },
  "devDependencies": {
    "@types/react": "VERSION_IGNORED",
    "@types/react-dom": "VERSION_IGNORED",
    "@vanilla-extract/css": "VERSION_IGNORED",
    "sku": "VERSION_IGNORED",
    "vitest": "VERSION_IGNORED",
  },
  "imports": {
    "#src/*": "./src/*",
  },
  "name": "new-project-vite",
  "packageManager": "pnpm@11.VERSION_IGNORED",
  "private": true,
  "scripts": {
    "build": "sku build",
    "format": "sku format",
    "lint": "sku lint",
    "start": "sku start",
    "test": "sku test --run",
  },
  "type": "module",
  "version": "1.0.0",
}
`;

exports[`sku-create > vite > should create pnpm-workspace.yaml 1`] = `
"allowBuilds:
  '@parcel/watcher': true
  '@swc/core': true
  core-js-pure: false
  esbuild: true
  sku: true
  unrs-resolver: true
blockExoticSubdeps: true
configDependencies:
  pnpm-plugin-sku: VERSION_IGNORED
minimumReleaseAge: 4320 # 3 days
minimumReleaseAgeExclude:
  - '@braid-design-system/*'
  - '@capsizecss/*'
  - '@seek/*'
  - '@sku-lib/*'
  - '@vanilla-extract/*'
  - '@vocab/*'
  - braid-design-system
  - browserslist-config-seek
  - eslint-config-seek
  - sku
publicHoistPattern:
  - eslint
  - prettier
strictDepBuilds: false
trustPolicy: off
trustPolicyExclude:
  - semver@6.3.1 # dependency of eslint-plugin-react
"
`;

exports[`sku-create > vite > should create sku.config.ts 1`] = `
"import type { SkuConfig } from 'sku';

const skuConfig = {
  clientEntry: 'src/client.tsx',
  renderEntry: 'src/render.tsx',
  environments: ['development', 'production'],
  publicPath: '/path/to/public/assets/', // <-- Required for sku build output
  testRunner: 'vitest',
  bundler: 'vite',
  pathAliases: {
    '#src/*': './src/*',
  },
} satisfies SkuConfig;

export default skuConfig;
"
`;

exports[`sku-create > vite > should create src/App/NextSteps.tsx 1`] = `
"import {
  Box,
  Heading,
  Text,
  Strong,
  ContentBlock,
  TextLink,
  Stack,
  List,
  Divider,
} from 'braid-design-system';

import * as styles from './NextSteps.css';

interface NextStepsProps {
  environment: 'development' | 'production';
}
export function NextSteps({ environment }: NextStepsProps) {
  return (
    <Box
      paddingY="xxlarge"
      paddingX={{ mobile: 'small', tablet: 'gutter' }}
      background="customDark"
      className={styles.background}
    >
      <ContentBlock width="large">
        <Stack space="xxlarge">
          <Stack space="xlarge">
            <Stack space="medium" align="center">
              <Heading level="1" component="span">
                🎉
              </Heading>
              <Heading level="1" weight="weak">
                Congratulations!
              </Heading>
            </Stack>
            <Stack space="medium" align="center">
              <Text size="large">
                <Strong>{'new-project-vite'}</Strong> has been successfully
                initialised.
              </Text>
              <Text>Current environment: {environment}</Text>
            </Stack>
          </Stack>

          <Box
            background="surface"
            borderRadius="xlarge"
            boxShadow="large"
            padding={{ mobile: 'large', tablet: 'xlarge', desktop: 'xxlarge' }}
          >
            <Stack space={{ mobile: 'xlarge', desktop: 'xxlarge' }}>
              <Stack space="large">
                <Heading level="2">🧰 Features and Tooling</Heading>
                <Text>
                  The project comes pre-configured with a lot of standardised
                  tooling to make authoring web applications easier.
                </Text>

                <Stack space="gutter">
                  <Heading level="3">Platform</Heading>

                  <Text>
                    The{' '}
                    <TextLink href="https://seek-oss.github.io/sku/">
                      sku platform
                    </TextLink>{' '}
                    provides a number of tools to make development more
                    efficient, for example,{' '}
                    <TextLink href="https://www.typescriptlang.org/">
                      TypeScript
                    </TextLink>
                    , <TextLink href="https://jestjs.io/">Jest</TextLink>,{' '}
                    <TextLink href="https://eslint.org/">ESLint</TextLink>, and
                    more.
                  </Text>
                </Stack>

                <Stack space="gutter">
                  <Heading level="3">Components</Heading>

                  <Text>
                    The project comes with{' '}
                    <TextLink href="https://seek-oss.github.io/braid-design-system/">
                      Braid Design System
                    </TextLink>{' '}
                    — SEEK&rsquo;s themeable component library.
                  </Text>
                </Stack>

                <Stack space="gutter">
                  <Heading level="3">Translations</Heading>

                  <Text>
                    The project comes with{' '}
                    <TextLink href="https://github.com/seek-oss/vocab/">
                      Vocab
                    </TextLink>{' '}
                    — SEEK&rsquo;s strongly-typed internationalization framework
                    for React.
                  </Text>
                </Stack>
              </Stack>

              <Divider weight="strong" />

              <Stack space="large">
                <Heading level="2">🏃‍♀️ Next steps</Heading>
                <Text>
                  Ensure you’re fully set up with these additional
                  recommendations.
                </Text>
                <Stack space="gutter">
                  <Heading level="3">Brand resources</Heading>
                  <Text>
                    To align your project to SEEK&rsquo;s brand standards it is
                    recommended to install{' '}
                    <TextLink href="https://github.com/SEEK-Jobs/shared-web-assets">
                      Shared web assets
                    </TextLink>
                    .
                  </Text>
                </Stack>

                <Stack space="gutter">
                  <Heading level="3">Telemetry</Heading>
                  <Text>
                    To help us improve sku, please install our private{' '}
                    <TextLink href="https://github.com/SEEK-Jobs/sku-telemetry">
                      sku telemetry
                    </TextLink>{' '}
                    package that gives us insights on usage, errors and
                    performance.
                  </Text>
                </Stack>
              </Stack>

              <Divider weight="strong" />

              <Stack space="large">
                <Heading level="2">🙋‍♂️ Support</Heading>

                <Text>
                  Whether it&rsquo;s a problem or a feature request, please
                  don&rsquo;t hesitate to contact us via slack.
                </Text>

                <Stack space="gutter">
                  <Heading level="3">Technical support</Heading>

                  <Text>
                    For technical queries about the platform or the design
                    system:
                  </Text>

                  <List>
                    <Text>
                      <TextLink href="https://seekchat.slack.com/channels/sku-support">
                        #sku-support
                      </TextLink>
                    </Text>
                    <Text>
                      <TextLink href="https://seekchat.slack.com/channels/braid-support">
                        #braid-support
                      </TextLink>
                    </Text>
                  </List>
                </Stack>

                <Stack space="gutter">
                  <Heading level="3">Design support</Heading>

                  <Text>
                    To discuss new or existing design patterns, visit{' '}
                    <TextLink href="https://seekchat.slack.com/channels/braid-design-support">
                      #braid-design-support
                    </TextLink>
                    .
                  </Text>
                </Stack>
              </Stack>

              <Divider weight="strong" />

              <Stack space="large">
                <Heading level="2">📣 Announcements</Heading>

                <Text>
                  For keeping up to date with new features and bug fixes as they
                  are released, it&rsquo;s recommended to join and turn on
                  notifications for the following channels:
                </Text>

                <List>
                  <Text>
                    <TextLink href="https://seekchat.slack.com/channels/front-end-tooling-announcements">
                      #front-end-tooling-announcements
                    </TextLink>
                  </Text>
                  <Text>
                    <TextLink href="https://seekchat.slack.com/channels/braid-announcements">
                      #braid-announcements
                    </TextLink>
                  </Text>
                </List>
              </Stack>
            </Stack>
          </Box>
        </Stack>
      </ContentBlock>
    </Box>
  );
}
"
`;

exports[`sku-create > vite > should create src/vite.env.d.ts 1`] = `
"// eslint-disable-next-line spaced-comment
/// <reference types="sku/vite/client" />
"
`;

exports[`sku-create > webpack > should create .gitignore 1`] = `
"node_modules
npm-debug.log

# managed by sku
.eslintcache
.prettierrc
.ssl
coverage/
dist/
eslint.config.mjs
report/
tsconfig.json
# end managed by sku
"
`;

exports[`sku-create > webpack > should create .prettierignore 1`] = `
"# managed by sku
.eslintcache
.prettierrc
coverage/
dist/
eslint.config.mjs
pnpm-lock.yaml
report/
tsconfig.json
# end managed by sku
"
`;

exports[`sku-create > webpack > should create README.md 1`] = `
"# new-project-webpack

This project is powered by [sku](https://github.com/seek-oss/sku), [braid](https://github.com/seek-oss/braid-design-system) and built with [React](https://facebook.github.io/react).

## Getting Started

First of all, make sure you&#39;ve installed [pnpm](https://pnpm.io/installation).

Then, install dependencies:

\`\`\`sh
$ pnpm i
\`\`\`

## Workflow

Start a local development server:

\`\`\`sh
$ pnpm run start
\`\`\`

Run unit tests:

\`\`\`sh
$ pnpm run test
\`\`\`

Lint and format code:

\`\`\`sh
$ pnpm run lint
$ pnpm run format
\`\`\`

Build assets for production:

\`\`\`sh
$ pnpm run build
\`\`\`
"
`;

exports[`sku-create > webpack > should create eslint.config.mjs 1`] = `
"/** THIS FILE IS GENERATED BY SKU, MANUAL CHANGES WILL BE DISCARDED **/
import { createEslintConfig } from 'sku/config/eslint';

export default await createEslintConfig('{cwd}/fixtures/sku-create/new-project-webpack/sku.config.ts');"
`;

exports[`sku-create > webpack > should create package.json 1`] = `
{
  "dependencies": {
    "braid-design-system": "VERSION_IGNORED",
    "react": "VERSION_IGNORED",
    "react-dom": "VERSION_IGNORED",
  },
  "devDependencies": {
    "@types/react": "VERSION_IGNORED",
    "@types/react-dom": "VERSION_IGNORED",
    "@vanilla-extract/css": "VERSION_IGNORED",
    "sku": "VERSION_IGNORED",
  },
  "imports": {
    "#src/*": "./src/*",
  },
  "name": "new-project-webpack",
  "packageManager": "pnpm@11.VERSION_IGNORED",
  "private": true,
  "scripts": {
    "build": "sku build",
    "format": "sku format",
    "lint": "sku lint",
    "start": "sku start",
    "test": "sku test",
  },
  "version": "1.0.0",
}
`;

exports[`sku-create > webpack > should create pnpm-workspace.yaml 1`] = `
"allowBuilds:
  '@parcel/watcher': true
  '@swc/core': true
  core-js-pure: false
  esbuild: true
  sku: true
  unrs-resolver: true
blockExoticSubdeps: true
configDependencies:
  pnpm-plugin-sku: VERSION_IGNORED
minimumReleaseAge: 4320 # 3 days
minimumReleaseAgeExclude:
  - '@braid-design-system/*'
  - '@capsizecss/*'
  - '@seek/*'
  - '@sku-lib/*'
  - '@vanilla-extract/*'
  - '@vocab/*'
  - braid-design-system
  - browserslist-config-seek
  - eslint-config-seek
  - sku
publicHoistPattern:
  - eslint
  - prettier
strictDepBuilds: false
trustPolicy: off
trustPolicyExclude:
  - semver@6.3.1 # dependency of eslint-plugin-react
"
`;

exports[`sku-create > webpack > should create sku.config.ts 1`] = `
"import type { SkuConfig } from 'sku';

const skuConfig = {
  clientEntry: 'src/client.tsx',
  renderEntry: 'src/render.tsx',
  environments: ['development', 'production'],
  publicPath: '/path/to/public/assets/', // <-- Required for sku build output
  pathAliases: {
    '#src/*': './src/*',
  },
} satisfies SkuConfig;

export default skuConfig;
"
`;

exports[`sku-create > webpack > should create src/App/NextSteps.tsx 1`] = `
"import {
  Box,
  Heading,
  Text,
  Strong,
  ContentBlock,
  TextLink,
  Stack,
  List,
  Divider,
} from 'braid-design-system';

import * as styles from './NextSteps.css';

interface NextStepsProps {
  environment: 'development' | 'production';
}
export function NextSteps({ environment }: NextStepsProps) {
  return (
    <Box
      paddingY="xxlarge"
      paddingX={{ mobile: 'small', tablet: 'gutter' }}
      background="customDark"
      className={styles.background}
    >
      <ContentBlock width="large">
        <Stack space="xxlarge">
          <Stack space="xlarge">
            <Stack space="medium" align="center">
              <Heading level="1" component="span">
                🎉
              </Heading>
              <Heading level="1" weight="weak">
                Congratulations!
              </Heading>
            </Stack>
            <Stack space="medium" align="center">
              <Text size="large">
                <Strong>{'new-project-webpack'}</Strong> has been successfully
                initialised.
              </Text>
              <Text>Current environment: {environment}</Text>
            </Stack>
          </Stack>

          <Box
            background="surface"
            borderRadius="xlarge"
            boxShadow="large"
            padding={{ mobile: 'large', tablet: 'xlarge', desktop: 'xxlarge' }}
          >
            <Stack space={{ mobile: 'xlarge', desktop: 'xxlarge' }}>
              <Stack space="large">
                <Heading level="2">🧰 Features and Tooling</Heading>
                <Text>
                  The project comes pre-configured with a lot of standardised
                  tooling to make authoring web applications easier.
                </Text>

                <Stack space="gutter">
                  <Heading level="3">Platform</Heading>

                  <Text>
                    The{' '}
                    <TextLink href="https://seek-oss.github.io/sku/">
                      sku platform
                    </TextLink>{' '}
                    provides a number of tools to make development more
                    efficient, for example,{' '}
                    <TextLink href="https://www.typescriptlang.org/">
                      TypeScript
                    </TextLink>
                    , <TextLink href="https://jestjs.io/">Jest</TextLink>,{' '}
                    <TextLink href="https://eslint.org/">ESLint</TextLink>, and
                    more.
                  </Text>
                </Stack>

                <Stack space="gutter">
                  <Heading level="3">Components</Heading>

                  <Text>
                    The project comes with{' '}
                    <TextLink href="https://seek-oss.github.io/braid-design-system/">
                      Braid Design System
                    </TextLink>{' '}
                    — SEEK&rsquo;s themeable component library.
                  </Text>
                </Stack>

                <Stack space="gutter">
                  <Heading level="3">Translations</Heading>

                  <Text>
                    The project comes with{' '}
                    <TextLink href="https://github.com/seek-oss/vocab/">
                      Vocab
                    </TextLink>{' '}
                    — SEEK&rsquo;s strongly-typed internationalization framework
                    for React.
                  </Text>
                </Stack>
              </Stack>

              <Divider weight="strong" />

              <Stack space="large">
                <Heading level="2">🏃‍♀️ Next steps</Heading>
                <Text>
                  Ensure you’re fully set up with these additional
                  recommendations.
                </Text>
                <Stack space="gutter">
                  <Heading level="3">Brand resources</Heading>
                  <Text>
                    To align your project to SEEK&rsquo;s brand standards it is
                    recommended to install{' '}
                    <TextLink href="https://github.com/SEEK-Jobs/shared-web-assets">
                      Shared web assets
                    </TextLink>
                    .
                  </Text>
                </Stack>

                <Stack space="gutter">
                  <Heading level="3">Telemetry</Heading>
                  <Text>
                    To help us improve sku, please install our private{' '}
                    <TextLink href="https://github.com/SEEK-Jobs/sku-telemetry">
                      sku telemetry
                    </TextLink>{' '}
                    package that gives us insights on usage, errors and
                    performance.
                  </Text>
                </Stack>
              </Stack>

              <Divider weight="strong" />

              <Stack space="large">
                <Heading level="2">🙋‍♂️ Support</Heading>

                <Text>
                  Whether it&rsquo;s a problem or a feature request, please
                  don&rsquo;t hesitate to contact us via slack.
                </Text>

                <Stack space="gutter">
                  <Heading level="3">Technical support</Heading>

                  <Text>
                    For technical queries about the platform or the design
                    system:
                  </Text>

                  <List>
                    <Text>
                      <TextLink href="https://seekchat.slack.com/channels/sku-support">
                        #sku-support
                      </TextLink>
                    </Text>
                    <Text>
                      <TextLink href="https://seekchat.slack.com/channels/braid-support">
                        #braid-support
                      </TextLink>
                    </Text>
                  </List>
                </Stack>

                <Stack space="gutter">
                  <Heading level="3">Design support</Heading>

                  <Text>
                    To discuss new or existing design patterns, visit{' '}
                    <TextLink href="https://seekchat.slack.com/channels/braid-design-support">
                      #braid-design-support
                    </TextLink>
                    .
                  </Text>
                </Stack>
              </Stack>

              <Divider weight="strong" />

              <Stack space="large">
                <Heading level="2">📣 Announcements</Heading>

                <Text>
                  For keeping up to date with new features and bug fixes as they
                  are released, it&rsquo;s recommended to join and turn on
                  notifications for the following channels:
                </Text>

                <List>
                  <Text>
                    <TextLink href="https://seekchat.slack.com/channels/front-end-tooling-announcements">
                      #front-end-tooling-announcements
                    </TextLink>
                  </Text>
                  <Text>
                    <TextLink href="https://seekchat.slack.com/channels/braid-announcements">
                      #braid-announcements
                    </TextLink>
                  </Text>
                </List>
              </Stack>
            </Stack>
          </Box>
        </Stack>
      </ContentBlock>
    </Box>
  );
}
"
`;
